2006-11-27  Kevin Kenny  <kennykb@acm.org>

	* unix/configure.in: Corrected Xft configuration so that Xft
	actually does get turned on when available.
	* unix/configure: autoconf
	
2006-11-26  Joe English  <jenglish@users.sourceforge.net>
	* generic/ttk/ttkWidget.c, generic/ttk/ttkPaned.c Fix for #1603506
	* library/ttk/button.tcl, library/ttk/combobox.tcl,
	library/ttk/utils.tcl: Rename ttk::CopyBindings to ttk::copyBindings
	* generic/ttk/ttkTreeview.c, doc/ttk_treeview.n: 
	-displaycolumns {} now means "no columns" instead of "all columns".
	Use -displaycolumns #all for "all columns" [Fixes #1547622].

2006-11-26  Daniel Steffen  <das@users.sourceforge.net>

	* tcl.m4 (Linux): --enable-64bit support. [Patch 1597389], [Bug 1230558]
	* configure: autoconf-2.59

2006-11-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* macosx/tkMacOSXInit.c (TkpInit): only set tcl_interactive 1 if
	it isn't already defined.  Allows embedders to set it to 0 to
	prevent the console appearing on OS X. [Bug 1487701]

	* unix/tkUnixMenu.c (DrawMenuUnderline): bound Tcl_UtfAtIndex usage
	* tests/menu.test (menu-36.1): [Bug 1599877]

2006-11-24  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/altTheme.tcl, library/ttk/clamTheme.tcl, 
	library/ttk/defaults.tcl, library/ttk/winTheme.tcl, 
	library/ttk/xpTheme.tcl: explicitly specify -anchor w on TMenubutton
	* tests/ttk/entry.test: Fixed font dependency; test entry-3.2 
	should work on all platforms now.
	* library/classicTheme.tcl: Don't define or use TkClassicDefaultFont.
	* generic/ttk/ttkTreeview.c, generic/ttk/ttkPanedwindow.c:
	Handle missing layouts.

2006-11-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinMenu.c (TkWinHandleMenuEvent, DrawMenuUnderline):
	handle unichar underlining correctly and safely. [Bug 1599877]

2006-11-20  Joe English  <jenglish@users.sourceforge.net>

	* win/ttkWinXPTheme.c: Add support for alternate/indeterminate
	checkbutton state.  Fix various spacing parameters [#1596020, 