@@ -1,3 +1,7 @@
+2006-11-28  Joe English  <jenglish@users.sourceforge.net>
+
+	* library/ttk/fonts.tcl: Clean up temporary variables.
+
 2006-11-27  Kevin Kenny  <kennykb@acm.org>
 
 	* unix/configure.in: Corrected Xft configuration so that Xft
